--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,35 +10,43 @@
         .container {
             max-width: 500px;
             margin-top: 50px;
+            border: 1px solid #593d3d;
+            border-radius: 5px;
+            padding: 20px;
         }
+
         h1 {
             text-align: center;
             margin-bottom: 30px;
         }
+
         #cajaPrincipal {
             margin-bottom: 20px;
         }
+
         #botonEnviar {
             margin-top: 20px;
         }
     </style>
 </head>
-<center>
-<body>
-    <div class="container">
-        <h1>FORMULARIO DINAMICO</h1>
-        <form id="myForm" action="#" method="POST">
-            <div id="caja_principal">
-                <!-- Aquí se agregarán los inputs -->
-            </div>
-            <button id="agregarInput" class="btn btn-primary" type="button">AGREGAR UN INPUT</button>
-            <button id="eliminarInput" class="btn btn-secondary" type="button">ELIMINAR ULTIMO INPUT</button>
-            <br><br>
-            <button id="botonEnviar" class="btn btn-success" type="submit">ENVIAR FORMULARIO</button>
-        </form>
-    </div>
 
-    <script src="script.js"></script>
-</center>
+<body>
+    <center>
+        <div class="container">
+            <h1>FORMULARIO DINAMICO</h1>
+            <form id="myForm" action="#" method="POST">
+                <div id="caja_principal">
+                    <!-- Aquí se agregarán los inputs -->
+                </div>
+                <button id="agregarInput" class="btn btn-primary" type="button">AGREGAR UN INPUT</button>
+                <button id="eliminarInput" class="btn btn-secondary" type="button">ELIMINAR ULTIMO INPUT</button>
+                <br><br>
+                <button id="botonEnviar" class="btn btn-success" type="submit">ENVIAR FORMULARIO</button>
+            </form>
+        </div>
+
+        <script src="script.js"></script>
+    </center>
 </body>
+
 </html>
